force-app/main/default/objects/Program__c/fields/Case_Participants__c.field-meta.xml
<CustomField>
    <fullName>Case_Participants__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used by the Intake process to determine if Client Household members should be Case Participants.</inlineHelpText>
    <label>Case Participants at Intake</label>
    <type>Checkbox</type>
</CustomField>