force-app/main/default/objects/Program__c/fields/Case_Record_Scope__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Scope__c</fullName>
    <label>Case Record Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Shared</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
                <default>true</default>
                <label>Program</label>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>