force-app/main/default/objects/Program__c/fields/Client_Scope__c.field-meta.xml
<CustomField>
    <fullName>Client_Scope__c</fullName>
    <label>Client Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Shared</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
                <default>true</default>
                <label>Organization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>