force-app/main/default/objects/Program__c/fields/Create_Case_Participants_for_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Create_Case_Participants_for_New_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by the Contact trigger to determine if Household members should be automatically added as Case Participants to existing Household Case Records (Contact insert into existing HH).</inlineHelpText>
    <label>Create Case Participants for New Members</label>
    <type>Checkbox</type>
</CustomField>