force-app/main/default/objects/Program__c/fields/Default_Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Bill_Code__c</fullName>
    <inlineHelpText>Default Bill Code (Funding Source) for Case Records.</inlineHelpText>
    <label>Default Bill Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partial Subsidy</fullName>
            </value>
            <value>
                <fullName>Financial Benefits</fullName>
            </value>
            <value>
                <fullName>Standard Subsidy</fullName>
            </value>
            <value>
                <fullName>Shallow Subsidy</fullName>
            </value>
            <value>
                <fullName>CBHS Mental Health</fullName>
            </value>
            <value>
                <fullName>CBHS Substance Use</fullName>
            </value>
            <value>
                <fullName>CoE</fullName>
            </value>
            <value>
                <fullName>HIV Prevention</fullName>
            </value>
            <value>
                <fullName>SPDPH</fullName>
            </value>
            <value>
                <fullName>PROG-111</fullName>
            </value>
            <value>
                <fullName>PROG-234</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>