force-app/main/default/objects/Program__c/fields/Default_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Record_Type__c</fullName>
    <inlineHelpText>The default record type for the Program at Intake. Note: this is the Record Type Label.</inlineHelpText>
    <label>Default Case Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>