force-app/main/default/objects/Program__c/fields/Default_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Status__c</fullName>
    <label>Default Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informed</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Re-enrolled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>