force-app/main/default/objects/Program__c/fields/Default_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Record_Type__c</fullName>
    <description>The default record type for the Program at Intake. Note: this is the Record Type Label.</description>
    <inlineHelpText>The default record type for the Program at Intake. Note: this is the Record Type Label.</inlineHelpText>
    <label>Default Contact Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>