force-app/main/default/objects/Program__c/fields/Default_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Referral_Status__c</fullName>
    <inlineHelpText>Default status for the inbound referral. Referral Status is set on the Case Record.</inlineHelpText>
    <label>Default Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Referred to Program</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Referral Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>