force-app/main/default/objects/Program__c/fields/Grant_Contract_Allocations_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Allocations_End_Date__c</fullName>
    <label>Grant/Contract Allocations End Date</label>
    <type>Date</type>
</CustomField>