force-app/main/default/objects/Program__c/fields/Grant_Contract_Report_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Report_Cutoff__c</fullName>
    <inlineHelpText>Used as max cutoff date in &apos;# Days in House (Grants/Contracts)&apos; field on Case Record.</inlineHelpText>
    <label>Grant/Contract Report Cutoff</label>
    <type>Date</type>
</CustomField>