force-app/main/default/objects/Program__c/fields/Group_Class_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set to true Group-Class list assignment options associated with this service are displayed during intake.</inlineHelpText>
    <label>Group / Class Assignment</label>
    <type>Checkbox</type>
</CustomField>