force-app/main/default/objects/Program__c/fields/Intake_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Intake_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECM_Configuration__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Intake</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipLabel>Programs using this Intake Configuration</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>