force-app/main/default/objects/Program__c/fields/Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services__c</fullName>
    <inlineHelpText>Count of number of Services</inlineHelpText>
    <label>Number of Services</label>
    <summaryForeignKey>Service__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>