force-app/main/default/objects/Program__c/fields/Program_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Area__c</fullName>
    <label>Program Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community Organizing</fullName>
            </value>
            <value>
                <fullName>Community Services</fullName>
            </value>
            <value>
                <fullName>Financial Education</fullName>
            </value>
            <value>
                <fullName>Health Services</fullName>
            </value>
            <value>
                <fullName>Homeless Services</fullName>
            </value>
            <value>
                <fullName>Housing and Financial Benefits</fullName>
            </value>
            <value>
                <fullName>Residential Services</fullName>
            </value>
            <value>
                <fullName>Youth &amp; Family Services</fullName>
            </value>
            <value>
                <fullName>Youth Development/Employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>