force-app/main/default/objects/Program__c/fields/Program_Entity__c.field-meta.xml
<CustomField>
    <fullName>Program_Entity__c</fullName>
    <label>Program Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>