force-app/main/default/objects/Program__c/fields/Program_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Number__c</fullName>
    <label>Program Number</label>
    <type>AutoNumber</type>
</CustomField>