force-app/main/default/objects/Program__c/fields/Program_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Short_Name__c</fullName>
    <externalId>true</externalId>
    <label>Program Short Name</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>