force-app/main/default/objects/Program__c/fields/Service_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set to true then the Service picklist is shown on intake for service enrollment.</inlineHelpText>
    <label>Service Enrollment</label>
    <type>Checkbox</type>
</CustomField>