force-app/main/default/objects/Program__c/fields/Service_History_Scope__c.field-meta.xml
<CustomField>
    <fullName>Service_History_Scope__c</fullName>
    <inlineHelpText>Used to track how broadly Program History records are shared within an organization. This is an information only field that can be used for criteria based sharing, etc. Setting or changing this field does not have any automatic affect on the system.</inlineHelpText>
    <label>Program History Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Shared</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
                <default>true</default>
                <label>Organization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>