force-app/main/default/objects/Program__c/fields/Service_Teams__c.field-meta.xml
<CustomField>
    <fullName>Service_Teams__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates that the program uses Service Teams (Service Team Member records).</inlineHelpText>
    <label>Service Teams</label>
    <type>Checkbox</type>
</CustomField>