force-app/main/default/objects/Program__c/fields/UpdateClientHouseholdFromCaseRecord__c.field-meta.xml
<CustomField>
    <fullName>UpdateClientHouseholdFromCaseRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When set, a change to the Client Household field on the Case Record will result in a change of the Main Client&apos;s Client Household field on the contact record. A blank value will result in the Client Household field being set to blank.</inlineHelpText>
    <label>Update Client Household From Case Record</label>
    <type>Checkbox</type>
</CustomField>