force-app/main/default/objects/Program__c/listViews/Grants_Contracts_Reporting_Fields.listView-meta.xml
<ListView>
    <fullName>Grants_Contracts_Reporting_Fields</fullName>
    <columns>NAME</columns>
    <columns>Grant_Contract_Allocations_Start_Date__c</columns>
    <columns>Grant_Contract_Allocations_End_Date__c</columns>
    <columns>Grant_Contract_Report_Cutoff__c</columns>
    <filterScope>Everything</filterScope>
    <label>Grants/Contracts Reporting Fields</label>
    <language>en_US</language>
    <sharedTo>
        <role>Contracts_Manager</role>
    </sharedTo>
</ListView>